# never_give_up

./: CMakeLists.txt  CMakeLists.txt.user.6c481f8  CMakeLists.txt.user.cdf7602  main.cpp
forms/qml/: Constants.qml  main.qml
forms/qml/components/customs/: CustomBtn.qml  CustomTextField.qml  DatePicker.qml  FormComboBox.qml  FormDatePicker.qml  FormFileSelector.qml  FormTextArea.qml  FormTextField.qml  LinkButton.qml  SearchField.qml
forms/qml/components/layouts/: ComicNavHeader.qml  DashboardMostPopularAuthor.qml  DefaultTableView.qml  GeneralReview.qml  GenericTableView.qml  LoadingScreen.qml
forms/qml/pages/: AuthorPage.qml  ComicPage.qml  DashboardPage.qml  LoginPage.qml  MainNavigation.qml
forms/qml/pages/forms/: AddAuthorForm.qml  AddCategoryForm.qml  AddComicForm.qml  AddUserForm.qml  LoginForm.qml  PromptUserForm.qml  RegisterForm.qml  ResetPasswordForm.qml  UpdateAdminForm.qml  UpdateAuthorForm.qml  UpdateCategoryForm.qml  UpdateComicForm.qml
forms/scripts/: requests.js  utilities.js
src/include/: admin.hpp  agent.hpp  request.hpp  response.hpp
src/include/entities/: author.hpp  category.hpp  comic.hpp  person.hpp
src/include/models/: admintabledata.hpp  admintablemodel.hpp  authorlistdata.hpp  authorlistmodel.hpp  categorieslistdata.hpp  categoriesmodel.hpp  comiclistdata.hpp  comiclistmodel.hpp
src/src/: admin.cpp  agent.cpp  main.cpp  request.cpp  response.cpp
src/src/entities/: author.cpp  category.cpp  comic.cpp  person.cpp
src/src/models/: admintabledata.cpp  admintablemodel.cpp  authorlistdata.cpp  authorlistmodel.cpp  categorieslistdata.cpp  categoriesmodel.cpp  comiclistdata.cpp  comiclistmodel.cpp
testing/build-never_give_up_tests-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CTestTestfile.cmake  build.ninja  cmake_install.cmake
testing/build-never_give_up_tests-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-55ae8147d445a7ec5586.json  cmakeFiles-v1-fab492ad524b74170b15.json  codemodel-v2-470d517e44cf9972f548.json  index-2023-03-18T20-53-54-0634.json  target-sessionTests-Debug-705a8ca3d247e2c71f43.json
testing/build-never_give_up_tests-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-3d60133fd8ff4428deca.json  codemodel-v2-0827ef4f061aa7174576.json  index-2023-03-18T15-20-26-0820.json  target-sessionTests-Debug-db327980bbc2dcc64ba6.json  target-sessionTests_autogen-Debug-15923da2c57f70d77535.json  target-sessionTests_autogen_timestamp_deps-Debug-b4ee5683baf89e39646a.json
testing/build-never_give_up_tests-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
testing/build-never_give_up_tests-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
testing/build-never_give_up_tests-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QEvent.77AAC8D4F331CAAF.idx  QIcon.B7E975FD84B20409.idx  QJsonValue.5751D33C3122577F.idx  QList.78FBB68EC09C5CB2.idx  QMargins.99B94621157CFC38.idx  QObject.F8AB796DF103478A.idx  QPixmap.493916A6D7655115.idx  QRect.7A1DC52DFD380301.idx  QSize.E7270DE89D4BFFE0.idx  QSizeF.EF5E2BE049AB2CAE.idx  QTransform.95738FBA54C84EC1.idx  QVariantMap.3255782A526378C7.idx  admin.hpp.AC8BE0920E2C8D77.idx  atomic_timed_wait.h.4C14A9C9D555BB16.idx  atomic_wait.h.211084A8FA9C2F01.idx  basic_ios.h.5B05F8DA67EC6948.idx  compare.196B3574262582AD.idx  exception.h.6347ADACB335B5B2.idx  istream.8E17176BD22D72CD.idx  iterator_concepts.h.5F314149D799F0D8.idx  limits.ED72BFAE94F0CAA1.idx  locale_facets.h.1ABD778FB97800F2.idx  max_size_type.h.57C3C774BCFF1F0B.idx  ostream.84E80B404D05E154.idx  qabstractitemmodeltester.h.1DB45D93F3C64B9A.idx  qatomic.h.64634FC47E7F8843.idx  qcontainerfwd.h.7F857D12DCC1D742.idx  qcoreapplication.h.2B458A5400022454.idx  qcoreevent.h.25DF3B0DC37C7174.idx  qcursor.h.C72C4EF42FD9A9F5.idx  qevent.h.8A02A48039802B3F.idx  qeventpoint.h.C61ED9717FA339DD.idx  qflags.h.07E05A85B606C7F6.idx  qfont.h.561C58EC7B4B6D3E.idx  qglobal.h.71A1E3B42B79FCBC.idx  qguiapplication.h.8B3B38D7C1FC835C.idx  qinputdevice.h.C9348D4F05015418.idx  qinputmethod.h.45C87FDA1FCD84C0.idx  qlist.h.A8198E8BCF8D4AFC.idx  qmetatype.h.70178E01B6D14D78.idx  (+50 more)
testing/build-never_give_up_tests-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/sessionTests_autogen/: deps  moc_predefs.h
testing/build-never_give_up_tests-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/sessionTests_autogen/include/: tst_sessiontests.moc  tst_sessiontests.moc.d
testing/never_give_up_tests/: CMakeLists.txt  tst_comicTests.cpp  tst_sessiontests.cpp
